DarkIce 0.8

    o added possibility to disable lowpass and highpass filtering for lame
    o fixed incorrect vorbis bitrate setting
    o fix: DarkIce now reports public streams correctly
      thanks to Tom Gray, <tomg@future-i.com>

19-10-2001: DarkIce 0.7 released

    o added support for FreeBSD
      thanks to Robin P. Blanchard, <Robin_Blanchard@gactr.uga.edu>
    o added support for resampling mp3 streams
    o DarkIce config file now may contain spaces and tabs as white space
    o configure script enables build with or without lame / Ogg Vorbis
      also possibility to specify alternate locations for these

18-09-2001: DarkIce 0.6 released

    o added support for IceCast2 server with Ogg Vorbis streaming
      Ogg Vorbis support thanks to aNa|0Gue <analogue@glop.org>
    o added support for SUN Solaris
    o removed long command line options (as these are extensions to UNIX)
    o removed configure option to specify location of lame library
    o removed configure option to compile static executable

09-09-2001: DarkIce 0.5 released

    o added support for ShoutCast servers
    o removed local copy of SGI STL, uses STL of the C++ compiler
    o compiles with gcc3-c++
    o added man page darkice.cfg.5
    o bugfix: config files can have comments before the first section

02-09-2001: DarkIce 0.4 released

    o support for external command line encoder removed, replaced
      with using lame as a shared object or statically linked library
    o added darkice man page
    o created RPM packages
    o DarkIce no longer reports an error if the sound card recording
      sample rate could not be set to the exact specified amount
      (e.g. the sound card reports 44101 Hz instead of 44100 Hz)


26-08-2001: DarkIce 0.3.1 released

    o support for unlimited time encoding
      thanks to Jim Crilly, <JCrilly@MSA.com>


20-12-2000: DarkIce 0.3 released

    o added POSIX real-time scheduling


18-11-2000: DarkIce 0.2 released

    o code cleanup